--- a/contatti.html
+++ b/contatti.html
@@ -52,20 +52,9 @@
     </div>
   </nav>
 
-  <div id="Contatti" class="content-padding background-light">
+  <div id="Contatti" class="content-padding background-light contatti">
     <h1 class="py-4 text-center">Contatti</h1>
     <div class="row justify-content-center pt-3 pb-5 bottom-border">
-      <div class="col-lg-4 col-md-4 contact-col">
-        <div class="row">
-          <div class="col-lg-3 col-md-2">
-            <img src="images/phone-icon.png" class="contact-icon" alt="phone contact icon">
-          </div>
-          <div class="col-lg-9 col-md-10">
-            <h2 class="pb-3 h3">Telefono</h2>
-            <p>+39 338 8210704</p>
-          </div>
-        </div>
-      </div>
       <div class="col-lg-4 col-md-4 contact-col">
         <div class="row">
           <div class="col-lg-3 col-md-2">
@@ -84,7 +73,8 @@
           </div>
           <div class="col-lg-9 col-md-10">
             <h2 class="pb-3 h3">Email</h2>
-            <p>elisa.fortunati@gmail.it</p>
+            <p>elisa.fortunati@gmail.com</p>
+              <p>elisa.fortunati@virgilio.it</p>
           </div>
         </div>
       </div>
@@ -120,26 +110,25 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-4 col-md-3">
-          <h3 class="pb-3 h4">Contatti</h3>
-          <div class="row align-items-center pb-3">
-            <div class="col-lg-1 col-md-2 footer-contact-icon">
-              <i class="fas fa-at"></i>
-            </div>
-            <div class="col-lg-11 col-md-10 footer-contact-p">
-              <p class="card-text">elisa.fortunati@gmail.it</p>
-              <p class="card-text">elisa.fortunati@virgilio.it</p>
-            </div>
+          <div class="col-lg-4 col-md-3">
+              <h3 class="pb-3 h4">Contatti</h3>
+              <div class="row align-items-center pb-3">
+                  <div class="col-lg-1 col-md-2 footer-contact-icon">
+                      <i class="fas fa-at"></i>
+                  </div>
+                  <div class="col-lg-11 col-md-10 footer-contact-p">
+                      <p class="card-text">elisa.fortunati@gmail.com</p>
+                  </div>
+              </div>
+              <div class="row align-items-center pb-3">
+                  <div class="col-lg-1 col-md-2 footer-contact-icon">
+                      <i class="fas fa-at"></i>
+                  </div>
+                  <div class="col-lg-11 col-md-10 footer-contact-p">
+                      <p class="card-text">elisa.fortunati@virgilio.it</p>
+                  </div>
+              </div>
           </div>
-          <div class="row align-items-center pb-3">
-            <div class="col-lg-1 col-md-2 footer-contact-icon">
-              <i class="fas fa-phone-alt"></i>
-            </div>
-            <div class="col-lg-11 col-md-10 footer-contact-p">
-              <p class="card-text">+39 338 8210704</p>
-            </div>
-          </div>
-        </div>
         <div class="col-lg-4 col-md-3">
           <div class="pb-5">
             <h3 class="pb-3 h4">Dove trovarmi</h3>
