--- a/recensioni.html
+++ b/recensioni.html
@@ -95,26 +95,25 @@
             </li>
           </ul>
         </div>
-        <div class="col-lg-4 col-md-3">
-          <h3 class="pb-3 h4">Contatti</h3>
-          <div class="row align-items-center pb-3">
-            <div class="col-lg-1 col-md-2 footer-contact-icon">
-              <i class="fas fa-at"></i>
-            </div>
-            <div class="col-lg-11 col-md-10 footer-contact-p">
-              <p class="card-text">elisa.fortunati@gmail.it</p>
-              <p class="card-text">elisa.fortunati@virgilio.it</p>
-            </div>
+          <div class="col-lg-4 col-md-3">
+              <h3 class="pb-3 h4">Contatti</h3>
+              <div class="row align-items-center pb-3">
+                  <div class="col-lg-1 col-md-2 footer-contact-icon">
+                      <i class="fas fa-at"></i>
+                  </div>
+                  <div class="col-lg-11 col-md-10 footer-contact-p">
+                      <p class="card-text">elisa.fortunati@gmail.com</p>
+                  </div>
+              </div>
+              <div class="row align-items-center pb-3">
+                  <div class="col-lg-1 col-md-2 footer-contact-icon">
+                      <i class="fas fa-at"></i>
+                  </div>
+                  <div class="col-lg-11 col-md-10 footer-contact-p">
+                      <p class="card-text">elisa.fortunati@virgilio.it</p>
+                  </div>
+              </div>
           </div>
-          <div class="row align-items-center pb-3">
-            <div class="col-lg-1 col-md-2 footer-contact-icon">
-              <i class="fas fa-phone-alt"></i>
-            </div>
-            <div class="col-lg-11 col-md-10 footer-contact-p">
-              <p class="card-text">+39 338 8210704</p>
-            </div>
-          </div>
-        </div>
         <div class="col-lg-4 col-md-3">
           <div class="pb-5">
             <h3 class="pb-3 h4">Dove trovarmi</h3>
